--- a/index.html
+++ b/index.html
@@ -65,6 +65,6 @@
     <div id="questionsContainer"></div>
     <button id="skipButton" style="display:none;">Skip Question</button>
 
-    <script src="script.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
