--- a/index.html
+++ b/index.html
@@ -60,11 +60,13 @@
     </form>
     
     <div id="score">Score: 0</div>
-    <div id="timer">Time left: 30 seconds</div>
+    <div id="timer">Time left: 15 seconds</div>
     <div id="finalScore"></div>
     <div id="questionsContainer"></div>
     <button id="skipButton" style="display:none;">Skip Question</button>
 
     <script src="app.js"></script>
+
+    <p id="finalScore"></p>
 </body>
 </html>
